[gd_scene load_steps=10 format=3 uid="uid://b6d54dh5njncq"]

[ext_resource type="Script" path="res://script/player.gd" id="1_vjkn2"]
[ext_resource type="Texture2D" uid="uid://33awfs7n44s3" path="res://assets/Art/player/player.png" id="2_jn26n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vu6uu"]
size = Vector2(10, 5)

[sub_resource type="Animation" id="Animation_5ionj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7svab"]
resource_name = "down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37]
}

[sub_resource type="Animation" id="Animation_kb8lg"]
resource_name = "up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45]
}

[sub_resource type="Animation" id="Animation_oiadd"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.00024012, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_443ut"]
_data = {
"RESET": SubResource("Animation_5ionj"),
"down": SubResource("Animation_7svab"),
"up": SubResource("Animation_kb8lg"),
"walk": SubResource("Animation_oiadd")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_swwuv"]
size = Vector2(12, 7)

[node name="player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 3
script = ExtResource("1_vjkn2")
speed = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_vu6uu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(2, -7)
scale = Vector2(0.85, 0.85)
texture = ExtResource("2_jn26n")
hframes = 8
vframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_443ut")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
position_smoothing_enabled = true
position_smoothing_speed = 20.0

[node name="take_damage_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="take_damage_box"]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_swwuv")

[node name="can_take_damage_timer" type="Timer" parent="."]

[connection signal="body_entered" from="take_damage_box" to="." method="_on_take_damage_box_body_entered"]
[connection signal="body_exited" from="take_damage_box" to="." method="_on_take_damage_box_body_exited"]
[connection signal="timeout" from="can_take_damage_timer" to="." method="_on_timer_timeout"]
